--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,20 @@
 .empty-vertice{
-    background-color: black;
+    background-color: rgb(59, 57, 57);
     border:rgb(255, 255, 255) 2px solid;
     width: 100%;
     height: 100%;
 }
+
+
+.ship-vertice{
+    background-color: rgb(35, 0, 90);
+    border:rgb(255, 255, 255) 2px solid;
+    width: 100%;
+    height: 100%;
+}
+
+
+
 *{
     font-family: 'Courier New', Courier, monospace;
     color:white;
